--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -13,11 +13,7 @@
 <body>
 <nav>
     <div class="container">
-        <div class="navbar-brand">smile.</div>
         <div class="navbar-links">
-            <a href="/">home</a>
-            <a href="/menu">menu</a>
-            <a href="/contact">contact</a>
         </div>
     </div>
 </nav>
@@ -28,6 +24,18 @@
     </header>
 
     <main>
+    <table>
+        <thead>
+            <tr>
+                <th>First_Name</th>
+                <th>Last_Name</th>
+                <th>Title</th>
+
+
+            </tr>
+
+        </thead>
+    </table>
         {% block main %}
         {% endblock %}
     </main>
